--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -521,7 +521,7 @@
 				\varphi(t)&=\lim_{k\to\infty}\varphi_{k}(t) \tag{\ref{thm:Teorema de Peano:eq1}} \\
 				&=\lim_{k\to\infty}\left(x_{0}+\int_{t_{0}}^{t}p_{k}(s,\varphi_{k}(s))\diff s\right) \tag{\ref{obs:solució general d'un problema de Cauchy}} \\
 				&=x_{0}+\lim_{k\to\infty}\int_{t_{0}}^{t}p_{k}(s,\varphi_{k}(s))\diff s \tag{\ref{obs:solució general d'un problema de Cauchy}} \\
-				&=x_{0}+\lim_{k\to\infty}\int_{t_{0}}^{t}p_{k}(s,\varphi_{k}(s))\diff s \\ % Propietats límits
+%				&=x_{0}+\lim_{k\to\infty}\int_{t_{0}}^{t}p_{k}(s,\varphi_{k}(s))\diff s \\ % Propietats límits
 				&=x_{0}+\int_{t_{0}}^{t}\lim_{k\to\infty}p_{k}(s,\varphi_{k}(s))\diff s \tag{\ref{thm:si una successió de funcions convergeix uniformement aleshores el límit de la integral dels elements de la succesió és la integral del límit dels elements de la successió}}\\
 %				&=x_{0}+\int_{t_{0}}^{t}\lim_{k\to\infty}p_{k}(s,\lim_{k\to\infty}\varphi_{k}(s))\diff s, \\
 %				&=x_{0}+\int_{t_{0}}^{t}\lim_{k\to\infty}p_{k}(s,\varphi(s))\diff s, \\
