Afegida teoria fins la versió general del teorema de Frenet (revisar una mica)

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -154,8 +154,10 @@
 \newcommand{\componentconnex}{\mathrm{C}}
 \newcommand{\biguniodisjunts}{\bigsqcup}
 \newcommand{\prodvec}{\mathbin{\wedge}}
+\newcommand{\rapidesa}{v}
 
 \newcommand{\sii}{\iff}
+\newcommand{\Sii}{\Longleftrightarrow}
 \newcommand{\implica}{\implies}
 \newcommand{\implicatper}{\impliedby}
 
@@ -182,6 +184,7 @@
 
 \newcommand{\corollari}{coro{\lgem}ari }
 \newcommand{\Corollari}{Coro{\lgem}ari }
+\newcommand{\nulla}{nu{\lgem}a }
 
 \makeatletter
 \newcommand*{\rom}[1]{\expandafter\@slowromancap\romannumeral #1@}
