--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -535,14 +535,14 @@
 	\end{proposition}
 	\begin{definition}[Curvatura]
 		\labelname{curvatura}\label{def:curvatura}
-		Sigui \(\alpha\) una corba sobre \(I\) i dues vegades diferenciable. Aleshores direm que l'aplicació
+		Sigui \(\alpha\) una corba parametritzada per l'arc sobre \(I\) i dues vegades diferenciable. Aleshores direm que l'aplicació
 		\begin{align*}
 			\curvatura_{\alpha}\colon I&\longrightarrow\mathbb{R} \\
 			t&\longmapsto\norm{\alpha''(t)}
 		\end{align*}
 		és la curvatura de \(\alpha\).
 		
-		Si \(\curvatura_{\alpha}(t)\neq0\) direm que \(\alpha\) té curvatura no nu{\lgem}a en \(t\).
+		Si \(\curvatura_{\alpha}(t)\neq0\) direm que \(\alpha\) té curvatura no \nulla en \(t\).
 	\end{definition}
 	\begin{example}
 		\label{ex:curvatura de la circumferència}
@@ -597,7 +597,7 @@
 	\end{observation}
 	\begin{proposition}
 		\label{prop:la tangent i la normal d'una corba amb curvatura no nula són perpendiculars}
-		Sigui \(\alpha\) una corba sobre \(I\) amb curvatura no nu{\lgem}a i \(t\in I\) un real. Aleshores els vectors \(\tangent_{\alpha}(t)\) i \(\normal_{\alpha}(t)\) són perpendiculars.
+		Sigui \(\alpha\) una corba sobre \(I\) amb curvatura no \nulla i \(t\in I\) un real. Aleshores els vectors \(\tangent_{\alpha}(t)\) i \(\normal_{\alpha}(t)\) són perpendiculars.
 		\begin{proof}
 			Considerem
 			\[\prodesc{\tangent_{\alpha}(t)}{\normal_{\alpha}(t)}.\]
@@ -635,13 +635,13 @@
 	\end{definition}
 	\begin{definition}[Binormal]
 		\labelname{binormal}\label{def:binormal}
-		Sigui \(\alpha\) una corba amb curvatura no nu{\lgem}a. Aleshores definim
+		Sigui \(\alpha\) una corba amb curvatura no \nulla. Aleshores definim
 		\[\binormal_{\alpha}(t)=\tangent_{\alpha}(t)\prodvec\normal_{\alpha}(t)\]
 		com la binormal de \(\alpha\).
 	\end{definition}
 	\begin{proposition}
 		\label{prop:triedre de Frenet}
-		Sigui \(\alpha\) una corba sobre \(I\) amb curvatura no nu{\lgem}a. Aleshores \((\tangent_{\alpha}(t),\normal_{\alpha}(t),\binormal_{\alpha}(t))\) és una base ortonormal i positiva de \(\mathbb{R}^{3}\).
+		Sigui \(\alpha\) una corba sobre \(I\) amb curvatura no \nulla. Aleshores \((\tangent_{\alpha}(t),\normal_{\alpha}(t),\binormal_{\alpha}(t))\) és una base ortonormal i positiva de \(\mathbb{R}^{3}\).
 		\begin{proof}
 			Per la proposició \myref{prop:la tangent i la normal d'una corba amb curvatura no nula són perpendiculars} trobem que \(\tangent_{\alpha}(t)\) i \(\normal_{\alpha}(t)\) són perpendiculars. Aleshores per la definició de \myref{def:binormal} trobem que \(\binormal_{\alpha}(t)=\tangent_{\alpha}(t)\prodvec\normal_{\alpha}(t)\) i per la proposició \myref{prop:dos vectors linealment independents i el seu producte vectorial formen una base positiva} tenim que la base \((\tangent_{\alpha}(t),\normal_{\alpha}(t),\binormal_{\alpha}(t))\) és positiva.
 			
@@ -656,13 +656,13 @@
 	\end{proposition}
 	\begin{definition}[Triedre de Frenet]
 		\labelname{triedre de Frenet}\label{def:triedre de Frenet}
-		Sigui\(\alpha\) una corba amb curvatura no nu{\lgem}a. Aleshores direm que la base \((\tangent_{\alpha}(t),\normal_{\alpha}(t),\binormal_{\alpha}(t))\) és el triedre de Frenet.
+		Sigui\(\alpha\) una corba amb curvatura no \nulla. Aleshores direm que la base \((\tangent_{\alpha}(t),\normal_{\alpha}(t),\binormal_{\alpha}(t))\) és el triedre de Frenet.
 		
 		Aquesta definició té sentit per la proposició \myref{prop:triedre de Frenet}.
 	\end{definition}
 	\begin{proposition}
 		\label{prop:torsió}
-		Sigui \(\alpha\) una corba amb curvatura no nu{\lgem}a. Aleshores existeix un \(\torsio_{\alpha}(t)\in\mathbb{R}\) tal que
+		Sigui \(\alpha\) una corba parametritzada per l'arc amb curvatura no \nulla. Aleshores existeix un \(\torsio_{\alpha}(t)\in\mathbb{R}\) tal que
 		\[\binormal'_{\alpha}(t)=\torsio_{\alpha}(t)\normal(t).\]
 		\begin{proof}
 			Tenim per la proposició \myref{prop:triedre de Frenet} que \((\tangent_{\alpha}(t),\normal_{\alpha}(t),\binormal_{\alpha}(t))\) és una base ortonormal de \(\mathbb{R}^{3}\), i per tant tenim que %REF
@@ -696,7 +696,7 @@
 	\end{proposition}
 	\begin{definition}[Torsió]
 		\labelname{torsió}\label{def:torsió}
-		Sigui \(\alpha\) una corba amb curvatura no nu{\lgem}a i \(\torsio_{\alpha}(t)\) un real tal que
+		Sigui \(\alpha\) una corba parametritzada per l'arc amb curvatura no \nulla i \(\torsio_{\alpha}(t)\) un real tal que
 		\[\binormal'_{\alpha}(t)=\torsio_{\alpha}(t)\normal(t).\]
 		Aleshores direm que \(\torsio_{\alpha}(t)\) és la torsió de \(\alpha\).
 		
@@ -704,8 +704,8 @@
 	\end{definition}
 	% FER Exemple calcular torsió?
 	\begin{proposition}[Fórmules de Frenet]
-		\labelname{fórmules de Frenet}\label{prop:fórmules de Frenet}
-		Sigui \(\alpha\) una corba parametritzada per l'arc amb curvatura no nu{\lgem}a. Aleshores
+		\labelname{fórmules de Frenet}\label{prop:fórmules de Frenet per corbes parametritzades per l'arc}
+		Sigui \(\alpha\) una corba parametritzada per l'arc amb curvatura no \nulla. Aleshores
 		\[\begin{bmatrix}
 			\tangent'_{\alpha}(t) \\
 			\normal'_{\alpha}(t) \\
@@ -755,6 +755,73 @@
 				\binormal'_{\alpha}(t)&=\torsio_{\alpha}(t)\normal(t)
 			\end{align*}
 			i per la definició de \myref{def:producte de matrius} hem acabat.
+		\end{proof}
+	\end{proposition}
+	\begin{proposition}
+		\label{prop:condició equivalent per que la reparametrització per l'arc d'una corba tingui curvatura no nula}
+		Sigui \(\alpha\) una corba amb curvatura no \nulla i \(h\) un canvi de paràmetre de \(\alpha\) tal que \(\tilde{\alpha}=\alpha\circ h\) estigui parametritzada per l'arc. Aleshores \(\tilde{\alpha}\) té curvatura no \nulla si i només si \(\alpha'\prodvec\alpha''\neq\vec{0}\).
+		\begin{proof}
+			Tenim que \(\tilde{\alpha}=\alpha\circ h\), i per la proposició \myref{prop:fórmula de Leibniz} i la \myref{thm:regla de la cadena} tenim que
+			\[\alpha'=h'(\tilde{\alpha}'\circ h)\]
+			i
+			\[\alpha''=h''(\tilde{\alpha}'\circ h)+(h')^{2}(\tilde{\alpha}''\circ h).\]
+			Per tant tenim que
+			\begin{align*}
+				\alpha'\prodvec\alpha''&=(h'(\tilde{\alpha}'\circ
+				 h))\prodvec(h''(\tilde{\alpha}'\circ h)+(h')^{2}(\tilde{\alpha}''\circ h)) \\
+				 &=(h'(\tilde{\alpha}'\circ h))\prodvec(h''(\tilde{\alpha}'\circ h))+(h'(\tilde{\alpha}'\circ h))\prodvec((h')^{2}(\tilde{\alpha}''\circ h)) \\
+				 &=h'h''(\tilde{\alpha}'\circ h)\prodvec(\tilde{\alpha}'\circ h)+(h')^{2}(h'(\tilde{\alpha}'\circ h))\prodvec(\tilde{\alpha}''\circ h) \\
+				&=(h')^{2}(\tilde{\alpha}'\circ h)\prodvec(\tilde{\alpha}''\circ h).
+			\end{align*}
+			
+			Ara bé, per la definició de \myref{def:canvi de paràmetre} tenim que \(h\) és un difeomorfisme, i per la definició de \myref{def:difeomorfisme} trobem que \(h\neq0\). Tenim també que \(h''\neq0\), i per tant trobem que
+			\[\alpha'\prodvec\alpha''=\vec{0}\Sii(\tilde{\alpha}'\circ h)\prodvec(\tilde{\alpha}''\circ h)=\vec{0},\]
+			i com que, per hipòtesi, \(\tilde{\alpha}\) està parametritzada per l'arc, per la definició de \myref{def:corba parametritzada per l'arc} tenim que \(\tilde{\alpha}'\circ h\neq\vec{0}\), i per la proposició \myref{prop:la primera derivada i la segona derivada d'una corba són perpendiculars} trobem que \((\tilde{\alpha}'\circ h)\prodvec(\tilde{\alpha}''\circ h)=\vec{0}\) si i només si \(\tilde{\alpha}''=\vec{0}\), i per tant
+			\[\alpha'\prodvec\alpha''=\vec{0}\Sii\norm{\tilde{\alpha}''}=\vec{0}.\qedhere\]
+		\end{proof}
+	\end{proposition}
+	\begin{definition}[Curvatura per una reparametrització]
+		\labelname{curvatura}\label{def:curvatura  per una reparametrització}
+		Sigui \(\alpha\) una corba amb curvatura no \nulla i \(\alpha'\prodvec\alpha''=\vec{0}\) i \(h\) un canvi de paràmetre de \(\alpha\) tal que \(\tilde{\alpha}=\alpha\circ h\) estigui parametritzada per l'arc. Aleshores direm que
+		\[\curvatura_{\alpha}=\curvatura_{\tilde{\alpha}}\circ h^{-1}\]
+		és la curvatura de \(\alpha\).
+		
+		Això té sentit per la definició de \myref{def:curvatura} i la proposició \myref{prop:condició equivalent per que la reparametrització per l'arc d'una corba tingui curvatura no nula}.
+	\end{definition}
+	\begin{definition}[Torsió per una reparametrització]
+		\labelname{torsió}\label{def:torsió  per una reparametrització}
+		Sigui \(\alpha\) una corba amb curvatura no \nulla i \(h\) un canvi de paràmetre de \(\alpha\) tal que \(\tilde{\alpha}=\alpha\circ h\) estigui parametritzada per l'arc. Aleshores direm que
+		\[\torsio_{\alpha}=\torsio_{\tilde{\alpha}}\circ h^{-1}\]
+		és la curvatura de \(\alpha\).
+		
+		Aquesta definició té sentit per la definició de \myref{def:torsió}.
+	\end{definition}
+	\begin{definition}[Rapidesa]
+		\labelname{rapidesa}\label{def:rapidesa}
+		Sigui \(\alpha\) una corba regular. Aleshores direm que
+		\[\rapidesa_{\alpha}(t)=\norm{\alpha'(t)}\]
+		és la rapidesa de \(\alpha\).
+	\end{definition}
+	\begin{proposition}[Fórmules de Frenet]
+		\labelname{fórmules de Frenet}\label{prop:fórmules de Frenet}
+		Sigui \(\alpha\) una corba amb curvatura no \nulla i tal que \(\alpha'\prodvec\alpha''=\vec{0}\). Aleshores
+		\[\begin{bmatrix}
+			\tangent_{\alpha}'(t) \\
+			\normal_{\alpha}'(t) \\
+			\binormal_{\alpha}'(t)
+		\end{bmatrix}
+		=\begin{bmatrix}
+			0 & \rapidesa_{\alpha}(t)\curvatura_{\alpha}(t) & 0 \\
+			-\rapidesa_{\alpha}(t)\curvatura_{\alpha}(t) & 0 & -\rapidesa_{\alpha}(t)\curvatura_{\alpha}(t) \\
+			0 & \rapidesa_{\alpha}\curvatura_{\alpha}(t) & 0
+		\end{bmatrix}
+		\begin{bmatrix}
+			\tangent_{\alpha}(t) \\
+			\normal_{\alpha}(t) \\
+			\binormal_{\alpha}(t)
+		\end{bmatrix}.\]
+		\begin{proof}
+			%TODO
 		\end{proof}
 	\end{proposition}
 \end{document}
